apps/kubefiles/myboot-deployment-configuration-secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myboot
  name: myboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myboot
  template:
    metadata:
      labels:
        app: myboot
    spec:
      containers:
      - name: myboot
        image: quay.io/burrsutter/myboot:v1
        ports:
          - containerPort: 8080
        volumeMounts:          
          - name: mysecretvolume
            mountPath: /mystuff/secretstuff
            readOnly: true
        resources:
          requests: 
            memory: "300Mi" 
            cpu: "250m" # 1/4 core
          limits:
            memory: "400Mi"
            cpu: "1000m" # 1 core
      volumes:
        - name: mysecretvolume
          secret:
            secretName: mysecret
