apps/kubefiles/myboot-deployment-resources-limits-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myboot-next
  name: myboot-next-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myboot-next
  template:
    metadata:
      labels:
        app: myboot-next
    spec:
      containers:
      - name: myboot
        image: quay.io/rhdevelopers/myboot:v3
        ports:
          - containerPort: 8080
        resources:
          requests: 
            memory: "300000Mi" 
            cpu: "250m" # 1/4 core
          limits:
            memory: "900000Mi"
            cpu: "1000m" # 1 core
