apps/kubefiles/myboot-pod-antiaffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myboot3
  name: myboot3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myboot3
  template:
    metadata:
      labels:
        app: myboot3
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector: 
              matchExpressions:
              - key: app
                operator: In
                values:
                - myboot
      containers:
      - name: myboot
        image: quay.io/rhdevelopers/myboot:v1
        ports:
          - containerPort: 8080
