apps/kubefiles/quarkus-statefulset-external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-statefulset-2
spec:
  type: LoadBalancer #<.>
  externalTrafficPolicy: Local #<.>
  selector:
    statefulset.kubernetes.io/pod-name: quarkus-statefulset-2 #<.>
  ports:
  - port: 8080
    name: web
